     Updated doc in README.Win32 to build with Microsoft Visual Studio 2010 Express.
     Added Windows crypt32 library to Windows linking as some compilers/platforms seem to
     require it and it is innocuous otherwise. For Steve Hay.
     Fixed a failure in t/external/20_cert_chain.t where some platforms do not
     have HTTPS in /etc/services. Reported and patched by Gisle Aas.

1.66 2014-08-21
     Fixed compile problem with perl prior to 5.8.8, similar to
     RT#76267. Reported by Graham Knop.
     Fixed a problem with Socket::IPPROTO_TCP on early perls.
     After discussions with the community and the original author Sampo
     Kellomaki, the license conditions have been changed to "Perl Artisitic
     License 2.0".


1.65  2014-07-14
     Added note to doc to make it clear that X509_get_subjectAltNames returns a
     packed binary IP address for type 7 - GEN_IPADD.
     Improvements to SSL_OCSP_response_verify to compile under non c99
     compilers. Requested by MERIJNB.
     Port to Android, contributed by Brian Fraser. Includes Android specific
     version of RSA_generate_key.
     Added LibreSSL support, patch provided by Alexander Bluhm. Thanks!
     Patch that fixes the support for SSL_set_info_callback and adds
     SSL_CTX_set_info_callback and SSL_set_state. Support for these functions is
     necessary to either detect renegotiation or to enforce
     renegotiation. Contributed by Steffen Ullrich. Thanks!
     Fixed a problem with SSL_set_state not available on some early OpenSSLs,
     patched by Steffen Ullrich. Thanks!
     Removed arbitrary size limits from calls to tcp_read_all in tcpcat() and
     http_cat().
     Removed unnecessary Debian_SPANTS.txt from MANIFEST. Again.

1.64 2014-06-11
     Fixes for test ocsp.t. Test now does not fail if HTTP::Tiny is not
     installed.
     Fixed repository in META.yml.
     Fixed a problem with SSL_get_peer_cert_chain: if the SSL handshake