@@ -1413,12 +1413,18 @@ SSL_CTX_v2_new()
 #endif
 #endif
 
+#ifndef OPENSSL_NO_SSL3
+#if OPENSSL_VERSION_NUMBER < 0x10002000L
+
 SSL_CTX *
 SSL_CTX_v3_new()
      CODE:
      RETVAL = SSL_CTX_new (SSLv3_method());
      OUTPUT:
      RETVAL
+
+#endif
+#endif
 
 SSL_CTX *
 SSL_CTX_v23_new()
@@ -3762,8 +3768,14 @@ SSLv2_method()
 #endif
 #endif
 
+#ifndef OPENSSL_NO_SSL3
+#if OPENSSL_VERSION_NUMBER < 0x10002000L
+
 const SSL_METHOD *
 SSLv3_method()
+
+#endif
+#endif
 
 const SSL_METHOD *
 TLSv1_method()
