@@ -13,6 +13,12 @@ Revision history for Perl extension Net::SSLeay.
      require it and it is innocuous otherwise. For Steve Hay.
      Fixed a failure in t/external/20_cert_chain.t where some platforms do not
      have HTTPS in /etc/services. Reported and patched by Gisle Aas.
+     Recent 1.0.2 betas have dropped the SSLv3_method function. 
+     This patch leaves out the function on newer versions, much the same as
+     the SSLv2 deprecation is handled. Patch from Tom Molesworth.
+     Fix the ALPN test, which was incorrectly failing on OpenSSL due to the
+     LibreSSL check (earlier versions bailed out before that line).Patch from
+     Tom Molesworth. 
 
 1.66 2014-08-21
      Fixed compile problem with perl prior to 5.8.8, similar to
